force-app/main/default/objects/ApprovalProcess__c/fields/Porcentaje_decremental_del_EP__c.field-meta.xml
<CustomField>
    <fullName>Porcentaje_decremental_del_EP__c</fullName>
    <formula>Costos_por_cubrir__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Porcentaje decremental del EP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>