force-app/main/default/objects/ApprovalProcess__c/fields/Presupuesto_Proyecto__c.field-meta.xml
<CustomField>
    <fullName>Presupuesto_Proyecto__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Requisito para validar &quot;Se cuenta con el presupuesto del proyecto&quot;</description>
    <label>Presupuesto Proyecto</label>
    <type>Checkbox</type>
</CustomField>