force-app/main/default/objects/ApprovalProcess__c/fields/Proveedor_es_y_banda_del_SE__c.field-meta.xml
<CustomField>
    <fullName>Proveedor_es_y_banda_del_SE__c</fullName>
    <label>Proveedor(es) y banda del SE</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>