force-app/main/default/objects/ApprovalProcess__c/fields/Proxima_fecha_cambio_segmento__c.field-meta.xml
<CustomField>
    <fullName>Proxima_fecha_cambio_segmento__c</fullName>
    <label>Próxima fecha cambio segmento</label>
    <type>Date</type>
</CustomField>