force-app/main/default/objects/ApprovalProcess__c/fields/Proxima_fecha_de_cancelacion_segmento__c.field-meta.xml
<CustomField>
    <fullName>Proxima_fecha_de_cancelacion_segmento__c</fullName>
    <description>- Fecha más próxima para cancelación de segmento</description>
    <label>Próxima fecha cancelación de segmento</label>
    <type>Date</type>
</CustomField>