force-app/main/default/objects/ApprovalProcess__c/fields/ROI__c.field-meta.xml
<CustomField>
    <fullName>ROI__c</fullName>
    <description>ROI = Retorno sobre la inversión, cuánto ganará la empresa en el tiempo.</description>
    <inlineHelpText>ROI = Retorno sobre la inversión, cuánto ganará la empresa en el tiempo.</inlineHelpText>
    <label>ROI</label>
    <precision>6</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>