force-app/main/default/objects/ApprovalProcess__c/fields/Saldo_cubierto_a_la_fecha__c.field-meta.xml
<CustomField>
    <fullName>Saldo_cubierto_a_la_fecha__c</fullName>
    <description>(Ingresos generados)</description>
    <label>Saldo cubierto a la fecha</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>