force-app/main/default/objects/ApprovalProcess__c/fields/Saldo_pendiente_de_pago__c.field-meta.xml
<CustomField>
    <fullName>Saldo_pendiente_de_pago__c</fullName>
    <label>Saldo pendiente de pago</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>