force-app/main/default/objects/ApprovalProcess__c/fields/Solicitud_de_baja_del_cliente__c.field-meta.xml
<CustomField>
    <fullName>Solicitud_de_baja_del_cliente__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Correo electrónico con la solicitud del cliente, enviado por un contacto autorizado (e.j. comprador)</description>
    <label>Solicitud de baja del cliente</label>
    <type>Checkbox</type>
</CustomField>