force-app/main/default/objects/ApprovalProcess__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <description>Etapas del proceso de aprobación para cambios.</description>
    <inlineHelpText>Etapas del proceso de aprobación para cambios.</inlineHelpText>
    <label>Etapa</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Iniciado</fullName>
            </value>
            <value>
                <fullName>Solicitado</fullName>
            </value>
            <value>
                <fullName>Documentación</fullName>
            </value>
            <value>
                <fullName>Aprobado</fullName>
            </value>
            <value>
                <fullName>Rechazado</fullName>
            </value>
            <value>
                <fullName>Cancelado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>