force-app/main/default/objects/ApprovalProcess__c/fields/Suma_Adecuaciones__c.field-meta.xml
<CustomField>
    <fullName>Suma_Adecuaciones__c</fullName>
    <label>Suma Adecuaciones</label>
    <summarizedField>OpportunityItemConsent__c.Partida_de_Ventas_Conv_MXN__c</summarizedField>
    <summaryFilterItems>
        <field>OpportunityItemConsent__c.Categoria_Costos__c</field>
        <operation>equals</operation>
        <value>SERVICIOS DE CAMPO</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>OpportunityItemConsent__c.Subcategoria_Costos__c</field>
        <operation>contains</operation>
        <value>ADECUACIONES</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityItemConsent__c.Proceso_de_aprobacion__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>