force-app/main/default/objects/ApprovalProcess__c/fields/Suma_Enlace_Satelital__c.field-meta.xml
<CustomField>
    <fullName>Suma_Enlace_Satelital__c</fullName>
    <label>Suma Enlace Satelital</label>
    <summarizedField>OpportunityItemConsent__c.Partida_de_Ventas_Conv_MXN__c</summarizedField>
    <summaryFilterItems>
        <field>OpportunityItemConsent__c.Categoria_Costos__c</field>
        <operation>equals</operation>
        <value>ENLACE SATELITAL</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>OpportunityItemConsent__c.Equipo_en_renta__c</field>
        <operation>equals</operation>
        <value>CON EQUIPO</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityItemConsent__c.Proceso_de_aprobacion__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>