force-app/main/default/objects/ApprovalProcess__c/fields/Suma_Equipo_Central__c.field-meta.xml
<CustomField>
    <fullName>Suma_Equipo_Central__c</fullName>
    <label>Suma Equipo Central</label>
    <summarizedField>OpportunityItemConsent__c.Partida_de_Ventas_Conv_MXN__c</summarizedField>
    <summaryFilterItems>
        <field>OpportunityItemConsent__c.Categoria_Costos__c</field>
        <operation>equals</operation>
        <value>EQUIPO CENTRAL</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityItemConsent__c.Proceso_de_aprobacion__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>