force-app/main/default/objects/ApprovalProcess__c/fields/Texto_acuerdo_decremento__c.field-meta.xml
<CustomField>
    <fullName>Texto_acuerdo_decremento__c</fullName>
    <formula
	>IF( Acuerdo_firmado_que_establezca_el_decrem__c , &quot;Si&quot;, &quot;No&quot;)</formula>
    <label>Texto acuerdo decremento</label>
    <type>Text</type>
</CustomField>