force-app/main/default/objects/ApprovalProcess__c/fields/Texto_Carta_finiquito__c.field-meta.xml
<CustomField>
    <fullName>Texto_Carta_finiquito__c</fullName>
    <description>Si se chequea el checkbox de carta finiquito, existe de lo contrario no existe</description>
    <formula>IF( Carta_finiquito__c , &apos;Si&apos;, &apos;No&apos;)</formula>
    <inlineHelpText>Si se chequea el checkbox de carta finiquito, existe de lo contrario no existe</inlineHelpText>
    <label>Texto Carta finiquito</label>
    <type>Text</type>
</CustomField>