force-app/main/default/objects/ApprovalProcess__c/fields/Texto_carta_solicitud_de_baja__c.field-meta.xml
<CustomField>
    <fullName>Texto_carta_solicitud_de_baja__c</fullName>
    <formula>IF(Solicitud_de_baja_del_cliente__c,&quot;Si&quot;,&quot;No&quot;)</formula>
    <label>Texto carta solicitud de baja</label>
    <type>Text</type>
</CustomField>