force-app/main/default/objects/ApprovalProcess__c/fields/Texto_compromiso_de_pago__c.field-meta.xml
<CustomField>
    <fullName>Texto_compromiso_de_pago__c</fullName>
    <formula>IF( Compromiso_de_pago_de_penalizacion_o_fin__c , &quot;Si&quot;, &quot;No&quot;)</formula>
    <label>Texto compromiso de pago</label>
    <type>Text</type>
</CustomField>