force-app/main/default/objects/ApprovalProcess__c/fields/Texto_contrato_permite_baja_anticipada__c.field-meta.xml
<CustomField>
    <fullName>Texto_contrato_permite_baja_anticipada__c</fullName>
    <formula>IF(El_contrato_permite_la_baja_anticipada__c,&quot;Si&quot;,&quot;No&quot;)</formula>
    <label>Texto contrato permite baja anticipada</label>
    <type>Text</type>
</CustomField>