force-app/main/default/objects/ApprovalProcess__c/fields/Tipo_de_Implementacion__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Implementacion__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Requisito para validar &quot;Se indica el tipo de implementación PM/OM&quot;</description>
    <label>Tipo de Implementación</label>
    <type>Checkbox</type>
</CustomField>