force-app/main/default/objects/ApprovalProcess__c/fields/Tipo_de_Ingreso__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Ingreso__c</fullName>
    <description
	>Tipo de Ingreso de expediente de proyecto, se usa en plantillas de correo</description>
    <formula>TEXT(Opportunity__r.Tipo_de_Ingreso__c)</formula>
    <inlineHelpText
	>Tipo de Ingreso de expediente de proyecto, se usa en plantillas de correo</inlineHelpText>
    <label>Tipo de Ingreso</label>
    <type>Text</type>
</CustomField>