force-app/main/default/objects/ApprovalProcess__c/fields/Tipos_de_servicios_a_cobrar__c.field-meta.xml
<CustomField>
    <fullName>Tipos_de_servicios_a_cobrar__c</fullName>
    <label>Tipos de servicios a cobrar</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>INSTALACION</fullName>
            </value>
            <value>
                <fullName>SITE SURVEY</fullName>
            </value>
            <value>
                <fullName>VISITA FALLIDA</fullName>
            </value>
            <value>
                <fullName>ADECUACIONES</fullName>
            </value>
            <value>
                <fullName>SOPORTE EN SITIO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>