force-app/main/default/objects/ApprovalProcess__c/fields/TIR__c.field-meta.xml
<CustomField>
    <fullName>TIR__c</fullName>
    <description
	>TIR = Tasa Interna de Retorno, mide la viabilidad de un proyecto determinando la rentabilidad de los cobros y pagos actualizados generados por una inversión</description>
    <inlineHelpText
	>TIR = Tasa Interna de Retorno, mide la viabilidad de un proyecto determinando la rentabilidad de los cobros y pagos actualizados generados por una inversión</inlineHelpText>
    <label>TIR</label>
    <precision>6</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>