force-app/main/default/objects/ApprovalProcess__c/fields/Total_de_la_cuenta__c.field-meta.xml
<CustomField>
    <fullName>Total_de_la_cuenta__c</fullName>
    <description>Total de la cuenta al momento de la solicitud o aprobación del proceso de aprobación</description>
    <inlineHelpText>Total de la cuenta al momento de la solicitud o aprobación del proceso de aprobación</inlineHelpText>
    <label>Total de la cuenta</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>