force-app/main/default/objects/ApprovalProcess__c/fields/Total_del_proyecto__c.field-meta.xml
<CustomField>
    <fullName>Total_del_proyecto__c</fullName>
    <description>El total del proyecto al momento de la solicitud y aprobación del proceso</description>
    <inlineHelpText>El total del proyecto al momento de la solicitud y aprobación del proceso</inlineHelpText>
    <label>Total del proyecto (VTC)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>