force-app/main/default/objects/ApprovalProcess__c/fields/Total_Montos_Mensuales_MXN__c.field-meta.xml
<CustomField>
    <fullName>Total_Montos_Mensuales_MXN__c</fullName>
    <description>Total montos mensuales del expediente proyecto, se usa para plantillas de correos</description>
    <formula>Opportunity__r.Total_Montos_Mensuales_MXN__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total montos mensuales del expediente proyecto, se usa para plantillas de correos</inlineHelpText>
    <label>Total Montos Mensuales MXN</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>