force-app/main/default/objects/ApprovalProcess__c/fields/Total_Montos_Unicos_MXN__c.field-meta.xml
<CustomField>
    <fullName>Total_Montos_Unicos_MXN__c</fullName>
    <description
	>Total Montos Unicos expediente de proyecto, se usa para plantillas de correo</description>
    <formula>Opportunity__r.Total_Montos_Unicos_MXN__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText
	>Total Montos Unicos expediente de proyecto, se usa para plantillas de correo</inlineHelpText>
    <label>Total Montos Unicos MXN</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>