force-app/main/default/objects/ApprovalProcess__c/fields/Total_Productos_Categorizados__c.field-meta.xml
<CustomField>
    <fullName>Total_Productos_Categorizados__c</fullName>
    <formula>Suma_Adecuaciones__c +  Suma_Enlace_Satelital__c +  Suma_Equipo_En_Sitio__c +  Suma_Instalaciones__c +  Suma_Site_Surveys__c +  Suma_Equipo_Central__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Productos Categorizados</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>