force-app/main/default/objects/ApprovalProcess__c/fields/Total_Proyecto__c.field-meta.xml
<CustomField>
    <fullName>Total_Proyecto__c</fullName>
    <description
	>Total del Proyecto VTC, se usa para plantillas de correo</description>
    <formula>Opportunity__r.Total_Proyecto__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText
	>Total del Proyecto VTC, se usa para plantillas de correo</inlineHelpText>
    <label>Total Proyecto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>