force-app/main/default/objects/ApprovalProcess__c/fields/Validacion_de_no_Adeudo__c.field-meta.xml
<CustomField>
    <fullName>Validacion_de_no_Adeudo__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Requisito para validar: &quot;Validación de no Adeudo&quot;</description>
    <label>Validación de no Adeudo</label>
    <type>Checkbox</type>
</CustomField>