force-app/main/default/objects/ApprovalProcess__c/fields/Vigencia_contrato_proveedor_satelital__c.field-meta.xml
<CustomField>
    <fullName>Vigencia_contrato_proveedor_satelital__c</fullName>
    <description>- Vigencia del contrato con el operador satelital</description>
    <label>Vigencia contrato proveedor satelital</label>
    <length>80</length>
    <type>Text</type>
</CustomField>