force-app/main/default/objects/ApprovalProcess__c/fields/Vigencia_del_servicio__c.field-meta.xml
<CustomField>
    <fullName>Vigencia_del_servicio__c</fullName>
    <description>Es el valor del campo &quot;Plazo a contratar (meses)&quot; que esta en el Expediente Proyecto</description>
    <formula>Opportunity__r.PlazoAContratarMeses__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vigencia del servicio (Meses)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>