force-app/main/default/objects/ApprovalProcess__c/fields/Vigencia_del_servicio_plazo_a_contratar__c.field-meta.xml
<CustomField>
    <fullName>Vigencia_del_servicio_plazo_a_contratar__c</fullName>
    <description>- Vigencia del servicio</description>
    <label>Vigencia del servicio (plazo a contratar</label>
    <length>80</length>
    <type>Text</type>
</CustomField>