force-app/main/default/objects/ApprovalProcess__c/recordTypes/Default.recordType-meta.xml
<RecordType>
    <fullName>Default</fullName>
    <active>true</active>
    <description>Proceso de apobación para expedientes de proyecto.</description>
    <label>Tipo de registro predeterminado</label>
</RecordType>