force-app/main/default/objects/ApprovalProcess__c/validationRules/ValidateInitialStage.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidateInitialStage</fullName>
    <active>true</active>
    <description>Valida la etapa inicial para el proceso de aprobación.</description>
    <errorConditionFormula>AND(ISNEW(),TEXT(Stage__c)!=&apos;Iniciado&apos;)</errorConditionFormula>
    <errorDisplayField>Stage__c</errorDisplayField>
    <errorMessage>La etapa inicial del proceso de aprobación debe ser igual a Iniciado.</errorMessage>
</ValidationRule>