force-app/main/default/objects/ApprovalProcess__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>AccountName__c</columns>
    <columns>Action__c</columns>
    <columns>Stage__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Fecha_de_aprobacion__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Opportunity__c</field>
        <operation>equals</operation>
        <value>CEPNTR0004877</value>
    </filters>
    <label>Todos</label>
</ListView>